# slow-megaparsec

./: flake.nix  megaparsec.cabal
Text/: Megaparsec.hs
Text/Megaparsec/: Internal.hs  State.hs  Stream.hs
megaparsec-tests/: megaparsec-tests.cabal
megaparsec-tests/src/Test/Hspec/Megaparsec/: AdHoc.hs
megaparsec-tracer/: megaparsec-tracer.cabal
parsers-bench/: parsers-bench.cabal
