cabal-version:   2.4
name:            megaparsec-tracer
version:         9.3.0
license:         BSD-3-Clause
maintainer:      Mark Karpov <markkarpov92@gmail.com>
author:
    Megaparsec contributors

tested-with:     ghc ==9.0.2 ghc ==9.2.4 ghc ==9.4.1
homepage:        https://github.com/mrkkrp/megaparsec
bug-reports:     https://github.com/mrkkrp/megaparsec/issues
synopsis:        Tracing megaparsec combinators
description:
    megaparsec is fast parser combinator library, but it might be hard
    to debug a complex parser built on top of megaparsec.
    Adding/removing printfs manually is routine.
    Automatic debugging is limited in mepagarsec due runtime costs.
    Main goal of the package is provide "step-by-step" tracing debugger for any parser
    built with megaparsec without development.
    Just replace megaparsec dependency with megaparsec-tracer in project cabal file
    and run broken test. The library packages are compatible with megaparsec, but
    have more introspection features at runtime expense.

    Parser is a state machine and traditional debugger experience is must.

    Besides out-of-the-box debugger megaparsec-tracer helps to estimate parsec efficiency i.e.
    how many times backtracking was used, average number character reread per single backracking.

    Also the package helps newbies to understand better how parser works.

category:        Parsing
build-type:      Simple

source-repository head
    type:     git
    location: https://github.com/mrkkrp/megaparsec.git

flag dev
    description: Turn on development settings.
    default:     False
    manual:      True

library
    exposed-modules:
        Text.Megaparsec
        Text.Megaparsec.Byte
        Text.Megaparsec.Byte.Binary
        Text.Megaparsec.Byte.Lexer
        Text.Megaparsec.Char
        Text.Megaparsec.Char.Lexer
        Text.Megaparsec.Debug
        Text.Megaparsec.Error
        Text.Megaparsec.Error.Builder
        Text.Megaparsec.Internal
        Text.Megaparsec.Pos
        Text.Megaparsec.Stream

    other-modules:
        Text.Megaparsec.Class
        Text.Megaparsec.Common
        Text.Megaparsec.Lexer
        Text.Megaparsec.State

    default-language: Haskell2010
    build-depends:
        base >=4.15 && <5.0,
        bytestring >=0.2 && <0.12,
        case-insensitive >=1.2 && <1.3,
        containers >=0.5 && <0.7,
        deepseq >=1.3 && <1.5,
        mtl >=2.2.2 && <3.0,
        parser-combinators >=1.0 && <2.0,
        scientific >=0.3.7 && <0.4,
        text >=0.2 && <2.1,
        transformers >=0.4 && <0.7

    if flag(dev)
        ghc-options: -O0 -Wall -Werror

    else
        ghc-options: -O2 -Wall

    if flag(dev)
        ghc-options:
            -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns
            -Wnoncanonical-monad-instances -Wno-missing-home-modules
